--- a/package.json
+++ b/package.json
@@ -1,4 +1,6 @@
 {
+  "name": "@scrapiloo/api",
+  "version": "0.0.1",
   "main": "src/index.ts",
   "prettier": {
     "singleQuote": false,
@@ -25,6 +27,7 @@
   },
   "license": "Apache-2.0",
   "dependencies": {
+    "axios": "^1.4.0",
     "ts-node": "^9.0.0"
   },
   "devDependencies": {
