save api output

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,7 +15,7 @@
     "strict": true,
     "strictNullChecks": false,
     "strictFunctionTypes": true,
-    "lib": ["ESNext", "DOM"]
+    "lib": ["ESNext"]
   },
   "include": ["src/**/*"]
 }
