--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "@scrapiloo/api",
   "version": "0.0.1",
   "main": "src/index.ts",
+  "private": false,
   "prettier": {
     "singleQuote": false,
     "bracketSpacing": false,
@@ -34,7 +35,7 @@
     "@babel/cli": "^7.11.6",
     "@babel/core": "^7.11.6",
     "@babel/preset-env": "^7.12.1",
-    "@types/node": "^12.12.2",
+    "@types/node": "^20.3.3",
     "typescript": "^4.1.3"
   }
 }
