--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   "license": "Apache-2.0",
   "dependencies": {
     "axios": "^1.4.0",
+    "node-fetch": "^3.3.1",
     "ts-node": "^9.0.0"
   },
   "devDependencies": {
