--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "jest": "^29.6.2",
     "rimraf": "^5.0.1",
     "ts-jest": "^29.1.1",
+    "ts-node": "^10.9.2",
     "typescript": "^5.1.6"
   }
 }
